// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "buyingPower": 0,
      "category": "Item",
      "cost": 1,
      "description": "Heal 1",
      "effects": Array [
        Object {
          "category": "Heal",
          "value": 1,
        },
      ],
      "id": "mock-id",
      "isPlayed": false,
      "name": "Apple",
    },
    Object {
      "buyingPower": 0,
      "category": "Item",
      "cost": 2,
      "description": "Heal 2",
      "effects": Array [
        Object {
          "category": "Heal",
          "value": 2,
        },
      ],
      "id": "mock-id-2",
      "isPlayed": false,
      "name": "Bananas",
    },
  ],
}
`;

exports[`creates a Card 1`] = `
Object {
  "buyingPower": 0,
  "category": "Item",
  "cost": 1,
  "description": "Heal 1",
  "effects": Array [
    Object {
      "category": "Heal",
      "value": 1,
    },
  ],
  "id": "mock-id",
  "isPlayed": false,
  "name": "Apple",
}
`;

exports[`creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "buyingPower": 0,
      "category": "Item",
      "cost": 1,
      "description": "Heal 1",
      "effects": Array [
        Object {
          "category": "Heal",
          "value": 1,
        },
      ],
      "id": "mock-id",
      "isPlayed": false,
      "name": "Apple",
    },
  ],
}
`;

exports[`removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
